--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.17)
-project(Strings C)
+project(C_Strings_and_Lists C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(Strings main.c read.h string.h stringArray.h stringio.h str.h error.h list.h)
+add_executable(C_Strings_and_Lists main.c)
