--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(C_Strings_and_Lists C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(C_Strings_and_Lists main.c)
+add_executable(C_Strings_and_Lists main.c printe.h)
